<resources>
    <string name="app_name">Tiffs Treats RECREATE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GARETT KINNEY</string>
    <string name="nav_header_subtitle">View Profile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_start_order">Start Order</string>
    <string name="menu_track_order">Track Order</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_cookieVision">CookieVision</string>
    <string name="menu_stickers">Stickers</string>
    <string name="menu_other_gift_options">Other Gift Options</string>
    <string name="menu_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>